<resources>
    <string name="app_name">BlackJackProject</string>
    <string name="dealer_hand">Dealer</string>
    <string name="dealer_value">display what dealer holds</string>
    <string name="player_hand">Player</string>
    <string name="player_value">display what dealer holds</string>
    <string name="deal_button">Deal</string>
    <string name="result">displays winner</string>
    <string name="dealer_message" />
    <string name="dealers_hand">what the dealer holds</string>
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
</resources>
